--- a/popup.html
+++ b/popup.html
@@ -27,10 +27,7 @@
                 <h1 class="app-title">See Who Unfollowed You</h1>
             </div>
             <div class="header-right">
-                <div class="status-indicator">
-                    <span class="status-dot"></span>
-                    <span class="status-text">Ready</span>
-                </div>
+                <button id="btn-nav-toggle" class="nav-toggle-btn">Results</button>
                 <button id="btn-settings" class="icon-button" aria-label="Settings">
                     <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <circle cx="12" cy="12" r="3"></circle>
@@ -44,14 +41,66 @@
 
         <!-- Main Views -->
         <main id="main-content">
-            <!-- View: Start (Initial State) -->
+            <!-- View: Start (Initial State / First Run) -->
             <section id="view-start" class="view active">
-                <div class="hero-section">
+                <!-- First Run State -->
+                <div id="first-run-state" class="hero-section">
+                    <div class="welcome-icon">
+                        <svg width="42" height="42" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                            stroke-width="1.2">
+                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
+                            <circle cx="9" cy="7" r="4"></circle>
+                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"></path>
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
+                        </svg>
+                    </div>
+                    <div class="welcome-text">
+                        <h1 class="welcome-title">See who unfollowed you</h1>
+                        <p class="welcome-subtitle">Clean, fast, and secure follower analysis.</p>
+                    </div>
                     <button id="btn-scan" class="btn-primary-large">
                         <span class="btn-text">Scan Followers</span>
                         <div class="btn-shine"></div>
                     </button>
                     <p class="helper-text">Safe scanning. No background activity.</p>
+                </div>
+
+                <!-- Returning User State (Greeting Page) -->
+                <div id="returning-user-state" class="hero-section hidden">
+                    <!-- Summary Container: expanded to fill space -->
+                    <div class="summary-container-large">
+                        <h3 class="summary-title-large">See what changed since last scan</h3>
+                        <p id="summary-sentence" class="summary-sentence-large">Checking...</p>
+
+                        <!-- Timeline View -->
+                        <div id="timeline-container" class="timeline-container hidden">
+                            <div id="timeline-list" class="timeline-list">
+                                <!-- Items injected via JS -->
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Scan Again Button -->
+                    <button id="btn-scan-again" class="btn-primary-large">
+                        <span class="btn-text">Scan Again</span>
+                        <div class="btn-shine"></div>
+                    </button>
+
+                    <!-- Cooldown Indicator -->
+                    <div class="cooldown-indicator">
+                        <div class="cooldown-info">
+                            <span id="last-scan-time" class="cooldown-text">Last scanned: Never</span>
+                            <span class="cooldown-separator">•</span>
+                            <span class="cooldown-text">Recommended: 12–24h</span>
+                            <span class="cooldown-tooltip-trigger">ⓘ
+                                <span class="cooldown-tooltip">Scanning too frequently may trigger Instagram's rate
+                                    limits. We recommend waiting 12-24 hours between scans.</span>
+                            </span>
+                        </div>
+                        <div id="cooldown-warning" class="cooldown-warning hidden">
+                            ⚠️ Frequent scans may trigger Instagram rate limits.
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -79,18 +128,27 @@
             <section id="view-results" class="view">
                 <div class="results-header">
                     <div class="tabs">
+                        <div class="tab-indicator"></div>
                         <button class="tab-btn active" data-tab="strangers">
-                            Unfollowers
+                            <span class="tab-label">Unfollowers</span>
                             <span id="count-strangers" class="badge">0</span>
                         </button>
                         <button class="tab-btn" data-tab="snakes">
-                            Snakes 🐍
+                            <span class="tab-label">Snakes</span>
                             <span id="count-snakes" class="badge">0</span>
                         </button>
                         <button class="tab-btn" data-tab="whitelisted">
-                            Whitelisted
+                            <span class="tab-label">Whitelisted</span>
                             <span id="count-whitelisted" class="badge-subtle">0</span>
                         </button>
+                    </div>
+                </div>
+
+                <!-- Scan Completion Banner -->
+                <div id="scan-completion-banner" class="completion-banner hidden">
+                    <div class="banner-content">
+                        <h4 id="banner-headline" class="banner-headline">What changed since last scan?</h4>
+                        <p id="banner-detail" class="banner-detail">Checking...</p>
                     </div>
                 </div>
 
@@ -128,9 +186,9 @@
         </main>
 
         <!-- Footer -->
-        <footer class="app-footer">
-            <p>All data stays on your device.</p>
         </footer>
+
+
     </div>
 
     <!-- Modals -->
