--- a/popup.html
+++ b/popup.html
@@ -67,9 +67,11 @@
 
                 <!-- Returning User State (Greeting Page) -->
                 <div id="returning-user-state" class="hero-section hidden">
-                    <!-- Summary Container: expanded to fill space -->
+                    <!-- Title (Outside Container) -->
+                    <h3 class="summary-title-large">See what changed since last scan</h3>
+
+                    <!-- Summary Container -->
                     <div class="summary-container-large">
-                        <h3 class="summary-title-large">See what changed since last scan</h3>
                         <p id="summary-sentence" class="summary-sentence-large">Checking...</p>
 
                         <!-- CLOUT TRACKER INJECTED HERE -->
